# sandbox

sandboxgame/: README.md  pyproject.toml
sandboxgame/src/sandboxgame/: core.py  game.py
sandboxgame/src/sandboxgame/utils/: __init__.py  io.py  messages.py
sandboxgame/tests/: test_cli.py  test_game.py  test_io.py
